--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529500739
+    eco: null
+    guid: 51e5d0d1-47a6-413b-8826-554b287873b1
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529500739
+    eco: null
+    guid: dc0a6ce7-5a86-48e8-ad1f-b1e8d5bb6402
+    state: new
