--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529501129
+    created: 1529501189
     eco: null
-    guid: 445646bb-83ab-41f3-81cd-efd238729ebe
+    guid: 9e7c20b8-fdae-4e16-9a9d-35183f824a8e
     state: running
