--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529501189
+    created: 1529501259
     eco: null
-    guid: 75dfe51f-cbe0-4e70-83dd-5805326741d4
+    guid: ec0f9b33-8e71-4ed4-ab4c-90209a35af60
     state: running
