--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529502539
+    eco: null
+    guid: 5630c5f3-2431-4bea-9a44-ebb33be175a2
+    state: running
+-   action_name: save
+    args: null
+    created: 1529502539
+    eco: null
+    guid: d2543c53-4559-44fd-84f0-18524be3e610
+    state: new
