--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529502989
+    eco: null
+    guid: 568d587a-2600-4323-9928-7171f06a2675
+    state: running
+-   action_name: save
+    args: null
+    created: 1529502989
+    eco: null
+    guid: 7d1ac7b9-56da-4f32-a4a7-36c108127fd3
+    state: new
