--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529504579
+    eco: null
+    guid: b35dd8bd-e4a4-48bf-87f8-48ad87cf1102
+    state: running
+-   action_name: save
+    args: null
+    created: 1529504579
+    eco: null
+    guid: 74b010b1-91ae-46ed-a350-1f36a7b011da
+    state: new
