--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529504849
+    eco: null
+    guid: 1c06b0d1-664d-4ffe-9c2c-7f81dddce82f
+    state: running
+-   action_name: save
+    args: null
+    created: 1529504849
+    eco: null
+    guid: 6065ef2a-0b5d-4df9-97bd-c84190fce2c9
+    state: new
