--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529505119
+    eco: null
+    guid: 3d8ac802-d865-41b4-ae49-a7fe39823109
+    state: running
