--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529512199
+    eco: null
+    guid: 64f8e8e0-0570-485e-a695-b93fca6ff35d
+    state: running
+-   action_name: save
+    args: null
+    created: 1529512199
+    eco: null
+    guid: 05f32e53-dba5-4053-ad6f-e0d7f0b1500d
+    state: new
