--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529513159
+    created: 1529513219
     eco: null
-    guid: 467b7464-1519-4aea-9129-3b613cd48ea3
+    guid: ce814824-1964-47a2-b828-0603bc8086d3
     state: running
