--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529515499
+    created: 1529515559
     eco: null
-    guid: 93cf1cc6-1ee4-4d65-8913-a1fdc07633ff
+    guid: cd6cfadf-aa16-4712-85fb-47e0ba5ed94b
     state: running
