--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529518859
+    eco: null
+    guid: f8d9c25a-db86-4f88-b094-d6f7879c1c85
+    state: running
+-   action_name: save
+    args: null
+    created: 1529518859
+    eco: null
+    guid: 66d45b85-fa07-460e-8efb-74fa20f30b80
+    state: new
