--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529519429
+    eco: null
+    guid: f15a74ad-39fc-4ab8-8d44-5160e6f44981
+    state: running
+-   action_name: save
+    args: null
+    created: 1529519429
+    eco: null
+    guid: d2e5aeeb-ce7d-4bb0-8170-925e2260e9e3
+    state: new
