--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529521289
+    created: 1529521349
     eco: null
-    guid: 563ba333-e953-4930-9dd6-d1a51121229b
+    guid: 6df5ce6c-16f5-4bfd-8baf-bb5f4b116e4f
     state: running
+-   action_name: save
+    args: null
+    created: 1529521349
+    eco: null
+    guid: 50e209b6-36c3-465a-973f-a03a439b2203
+    state: new
