--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529521799
+    eco: null
+    guid: 77e2edf3-ca69-42b3-a202-01623d49ab7a
+    state: running
+-   action_name: save
+    args: null
+    created: 1529521799
+    eco: null
+    guid: 4224d5b0-fa7a-4614-8fa2-a80009b16cc5
+    state: new
