--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529522249
+    eco: null
+    guid: a665dc7b-0602-4380-a63b-3e1252c2f0b0
+    state: running
+-   action_name: save
+    args: null
+    created: 1529522249
+    eco: null
+    guid: 4b4ac20f-1081-46b7-b85c-1839cfa0bdb9
+    state: new
