--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529522249
+    created: 1529522309
     eco: null
-    guid: 05df8221-9cda-4da0-a505-35761e6cdac1
+    guid: cd00b370-d9b0-49f7-a6b3-0e8ddd7f9cb6
     state: running
