--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529522819
+    created: 1529522879
     eco: null
-    guid: d57f7871-308d-472c-9a23-8d7c3a811bf3
+    guid: eba02daf-de66-40f2-afc5-91550a98645b
     state: running
+-   action_name: save
+    args: null
+    created: 1529522879
+    eco: null
+    guid: 2c0a3ee0-ad6a-414c-a2ae-9cba2b3b9bea
+    state: new
