--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529523329
+    created: 1529523389
     eco: null
-    guid: 21343ae6-40a1-4c55-b790-c0c0b9c1c75e
+    guid: 87309a64-be9a-4a9a-a2c4-3f8b14a48cad
     state: running
+-   action_name: save
+    args: null
+    created: 1529523389
+    eco: null
+    guid: 07235d87-8592-4319-9fc8-7e36dc95466a
+    state: new
