--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529523899
+    eco: null
+    guid: d5a8c1a3-71b0-4943-8414-4432b5d90012
+    state: running
