--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529523899
+    created: 1529523959
     eco: null
-    guid: 8965a153-3454-4b3c-a9b6-ac07d33ffc0e
+    guid: 7ad88ba4-87ac-4226-9e84-b875c812a52e
     state: running
