--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529525039
+    created: 1529525099
     eco: null
-    guid: 116fa753-184a-4d13-8cdb-27bdab8b7a2a
+    guid: 739bbcd7-1f6a-41a2-bb46-451f793ae067
     state: running
+-   action_name: save
+    args: null
+    created: 1529525099
+    eco: null
+    guid: 1fde0a2a-904e-4c40-8b18-44c126fc21ac
+    state: new
